[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Graphics/background1.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1015.55, 596.237, 0, 0, 0, 0, 5.53444, 575.655, 0, 0, 0, 0, 3.30164, 2.51445, 0, 0, 0, 0, 1017.8, 3.80681, 0, 0, 0, 0, 1015.55, 596.237 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 516.262, 298.378 )
scale = Vector2( 0.327743, 0.457186 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 171, 318 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawn" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 1015.55, 596.237 )
rotation = -3.12121

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
